CompiladorDA/LenguajeAnalisisDatos.atg
COMPILER LenguajeAnalisisDatos

using System.Text;
using System.Collections.Generic;

private StringBuilder pythonCode;

/* ===== CARACTERES Y CONJUNTOS ===== */
CHARACTERS
  letter = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz".
  digit = "0123456789".
  space = ' '.
  cr = '\r'.
  lf = '\n'.
  tab = '\t'.
  blancos = space + tab + cr + lf.
  stringChar = ANY - '"' - '\r' - '\n'.
  nl = cr + lf.
  printable = ANY - cr - lf.

/* ===== TOKENS ===== */
TOKENS
  ident = letter {letter | digit | "_"}.
  number = digit {digit}.
  string = '"' {stringChar} '"'.

  ANALIZAR = "ANALIZAR".
  DATOS = "DATOS".
  FILTRAR = "FILTRAR".
  WHERE = "WHERE".
  AGRUPAR = "AGRUPAR".
  POR = "POR".
  CALCULAR = "CALCULAR".
  GRAFICAR = "GRAFICAR".
  GUARDAR = "GUARDAR".
  COMO = "COMO".
  PROMEDIO = "promedio".
  SUMA = "suma".
  COUNT = "count".
  BARRAS = "barras".
  LINEA = "linea".
  DISPERSION = "dispersion".

/* ===== IGNORAR ===== */
IGNORE '\r' + '\n' + '\t' + ' '

/* ===== PRODUCCIONES ===== */
PRODUCTIONS

LenguajeAnalisisDatos
= (. pythonCode = new StringBuilder();
     pythonCode.AppendLine("import pandas as pd");
     pythonCode.AppendLine("import matplotlib.pyplot as plt"); 
     pythonCode.AppendLine("print('=== INICIANDO ANÁLISIS DE DATOS ===')"); .)
  {Comando (. pythonCode.AppendLine(); .)} 
  (. 
     //  AGREGAR RESUMEN FINAL AUTOMÁTICO
     pythonCode.AppendLine("print('=== ANÁLISIS COMPLETADO ===')");
     pythonCode.AppendLine("print('DataFrame original:', resultado.shape)");
     pythonCode.AppendLine("if 'resultado' in locals():");
     pythonCode.AppendLine("    print('Resultados calculados:')");
     pythonCode.AppendLine("    print(resultado)");
     pythonCode.AppendLine("else:");
     pythonCode.AppendLine("    print('No se calcularon resultados agrupados')");
     
     Console.WriteLine("=== CÓDIGO PYTHON GENERADO ===");
     Console.WriteLine(pythonCode.ToString());
     File.WriteAllText("output.py", pythonCode.ToString()); 
  .).

Comando = 
    AnalizarDatos
  | FiltrarDatos
  | AgruparDatos
  | CalcularDatos
  | GraficarDatos
  | GuardarResultado.

AnalizarDatos
= (. string archivo = ""; .)
  ANALIZAR DATOS (. pythonCode.Append("resultado = pd.read_csv("); .)
  string (. archivo = t.val; 
             pythonCode.AppendLine(archivo + ")"); 
             // MOSTRAR INFORMACIÓN DEL DATASET
             pythonCode.AppendLine("print('Dataset cargado:', resultado.shape)");
             pythonCode.AppendLine("print('Columnas:', list(resultado.columns))");
             pythonCode.AppendLine("print('Primeras filas:')");
             pythonCode.AppendLine("print(resultado.head())"); .).

FiltrarDatos
= (. string expr = ""; .)
  FILTRAR WHERE (. pythonCode.Append("resultado = resultado["); .)
  Expression (. pythonCode.AppendLine("]"); 
                 // MOSTRAR FILTRO APLICADO
                 pythonCode.AppendLine("print('Filtro aplicado. Nuevo shape:', resultado.shape)"); .).

Expression
= (. string columna = "", operador = "", valor = ""; .)
  ident (. columna = t.val; 
            pythonCode.Append("resultado['" + columna + "'] "); .)  // ← CAMBIA ESTA LÍNEA
  ( ">"  (. operador = ">"; .)
  | "<"  (. operador = "<"; .)
  | ">=" (. operador = ">="; .)
  | "<=" (. operador = "<="; .)
  | "==" (. operador = "=="; .)
  )
  (. pythonCode.Append(operador + " "); .)
  ( number (. valor = t.val; pythonCode.Append(valor); .)
  | string (. valor = t.val; pythonCode.Append(valor); .)
  ).

AgruparDatos
= (. string columna = ""; .)
  AGRUPAR POR (. pythonCode.Append("resultado = resultado.groupby("); .)
  ident (. columna = t.val; 
            pythonCode.AppendLine("['" + columna + "'])"); .).

CalcularDatos
= (. int count = 0; .)
  CALCULAR (. pythonCode.Append("resultado = resultado.agg({"); .)
  Funcion (. count++; .)
  {"," (. pythonCode.Append(", "); .) 
  Funcion (. count++; .)
  } 
  (. pythonCode.AppendLine("})"); .).

Funcion
= (. string tipo = "", col = ""; .)
  ( PROMEDIO (. tipo = "mean"; .)
  | SUMA    (. tipo = "sum"; .)
  | COUNT   (. tipo = "count"; .)
  ) 
  "(" 
  ident (. col = t.val; 
            pythonCode.Append("'" + col + "': '" + tipo + "'"); .)
  ")".


GraficarDatos
= (. string tipoGrafico = "", ejeX = "", ejeY = ""; .)
  GRAFICAR "tipo" "=" 
  ( BARRAS     (. tipoGrafico = "bar"; .)
  | LINEA      (. tipoGrafico = "line"; .)
  | DISPERSION (. tipoGrafico = "scatter"; .)
  )
  (. 
     pythonCode.AppendLine("resultado = resultado.reset_index()");
     
     // ✅ MANEJAR DIFERENTES TIPOS DE GRÁFICOS
     if (tipoGrafico == "scatter") {
         pythonCode.AppendLine("# Gráfico de dispersión");
         pythonCode.Append("plt.scatter(x=resultado['");
     } else {
         pythonCode.Append("resultado.plot(kind='" + tipoGrafico + "', x='");
     }
  .)
  ["eje_x" "=" ident (. ejeX = t.val; 
                         pythonCode.Append(ejeX); .)]
  (. 
     if (tipoGrafico == "scatter") {
         pythonCode.Append("'], y=resultado['");
     } else {
         pythonCode.Append("', y='");
     }
  .)
  ["eje_y" "=" ident (. ejeY = t.val; 
                         pythonCode.Append(ejeY); .)]
  (. 
     // ✅ CERRAR CORRECTAMENTE
     if (tipoGrafico == "scatter") {
         pythonCode.AppendLine("'])");
     } else {
         pythonCode.AppendLine("')");
     }
     
     pythonCode.AppendLine("plt.title('Resultados del Análisis')");
     pythonCode.AppendLine("plt.xlabel('" + ejeX + "')");
     pythonCode.AppendLine("plt.ylabel('" + ejeY + "')");
     pythonCode.AppendLine("plt.tight_layout()");
     pythonCode.AppendLine("plt.savefig('grafico.png')");
     pythonCode.AppendLine("print('Gráfico guardado como grafico.png')");
  .).

GuardarResultado
= (. string archivo = ""; .)
  GUARDAR COMO (. pythonCode.Append("resultado.to_csv("); .)
  string (. archivo = t.val; 
             pythonCode.AppendLine(archivo + ")"); .).

/* ===== FIN ===== */
END LenguajeAnalisisDatos.
